# RONin

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  dist-workspace.toml  project-instructions.md  release-plz.toml
.github/: sddp-config.md
.github/workflows/: ci.yml  gates.yml  release-plz.yml  release-verify.yml  release.yml
ci/: check-channel-routing.py  check-channel-routing.sh  check-manifest-metadata.py  check-provenance-sbom.py  check-release-hardening.py  check-sha-pins.py  publish-dry-run.sh
docs/runbooks/: branch-protection.md  ci-local-repro.md  release.md
samples/: sample.ron  showcase_bevy.scn.ron  showcase_highlight.ron  showcase_tree.ron
specs/: dod.md  prd.md  project-plan.md  sad.md
specs/00002-ci-quality-gates/: analysis-report.md  plan.md  spec.md  tasks.md
specs/00002-ci-quality-gates/checklists/: .checklists  security.md  testing.md
specs/adrs/: 0001-lossless-cst-editing-model.md  0002-hexagonal-cargo-workspace.md  0003-egui-gui-framework.md  0004-schema-optional-type-model.md  0005-non-destructive-persistence.md
src/ron-core/: Cargo.toml  README.md
src/ron-core/src/: diagnostics.rs
src/ron-types/: Cargo.toml  README.md
src/ron-types/src/: lib.rs
src/ron-types/src/source/: bevy_source.rs  mod.rs
src/ron-types/tests/: bevy_source.rs
src/ron-validate/: Cargo.toml  README.md
src/ron-validate/src/: lib.rs  projection.rs  validate.rs
src/ron-validate/tests/: degradation.rs  dependency_invariants.rs  error_kinds.rs  no_false_positives.rs  projection.rs  range_precision.rs  read_only.rs  subtree_validate.rs
src/ronin-app/: CHANGELOG.md  Cargo.toml  README.md
src/ronin-app/samples/: showcase_fallbacks.ron  showcase_interop.ron  showcase_kitchen_sink.ron  showcase_tables.ron
src/ronin-app/src/: app.rs  binding.rs  byte_to_char.rs  completion.rs  diagnostics_map.rs  document.rs  editor_view.rs  fileio.rs  lib.rs  logging.rs  main.rs  panels.rs  problems_panel.rs  recovery.rs  reparse.rs  settings.rs  snippets.rs  type_acquire.rs  workspace.rs
src/ronin-app/src/bevy/: elision.rs  mod.rs  mode.rs  scene.rs  validate.rs
src/ronin-app/src/interop/: comments.rs  emit.rs  json_to_ron.rs  jsonc.rs  loss.rs  mod.rs  pointer.rs  ron_to_json.rs  scaffold.rs
src/ronin-app/src/structural/: classifier.rs  indicators.rs  mod.rs  projection.rs  sections.rs  table.rs  tree.rs  view_state.rs
src/ronin-app/tests/: all_samples_load.rs  app_shell.rs  atomic_save.rs  authoring_notice_routing.rs  authoring_scaffold.rs  bevy_elision.rs  bevy_large_scene.rs  bevy_mode.rs  bevy_scene.rs  bevy_validate.rs  bevy_validation_path.rs  binding_resolution.rs  binding_ui.rs  completion_popup.rs  config_trust.rs  cross_action_round_trip.rs  dependency_invariants.rs  edit_feedback.rs  eol_roundtrip.rs  font_install.rs  format_commands.rs  foundational.rs  gen_screenshots.rs  idle_repaint.rs  interop_commands.rs  interop_derive.rs  interop_json_to_ron.rs  interop_ron_to_json.rs  interop_roundtrip.rs  large_file_degrade.rs  layout_shell.rs  offline_logging.rs  open_and_view.rs  panels_harness.rs  problems_nav.rs  recovery.rs  revalidation_triggers.rs  save_and_dirty.rs  showcase_samples.rs  snippets.rs  (+9 more)
src/ronin-app/tests/fixtures/: bevy_registry_defaults.json  large_ships.ron
src/ronin-app/tests/fixtures/scenes/: omitted_resources.scn.ron  unregistered_component.scn.ron  valid.scn.ron  verbose_defaults.scn.ron  wrong_typed.scn.ron
src/ronin-app/tests/snapshots/: interop_derive__rich_config_scaffold.snap  interop_roundtrip__base_tier_jsonc.snap  interop_roundtrip__base_tier_string_map.snap  interop_roundtrip__expanded_tier_jsonc.snap  table_ergonomics__comment_rich_increment.snap  table_ergonomics__cross_action_sequence.snap
src/ronin-core/: Cargo.toml  README.md
src/ronin-core/benches/: parse_print.rs
src/ronin-core/fuzz/: Cargo.toml
src/ronin-core/fuzz/fuzz_targets/: roundtrip.rs
src/ronin-core/src/: completion.rs  diagnostics.rs  edit.rs  formatter.rs  lexer.rs  lib.rs  parser.rs  printer.rs  transform.rs  undo.rs
src/ronin-core/src/syntax/: ast.rs  kind.rs  mod.rs
src/ronin-core/tests/: completion.rs  consumer_api.rs  corpus.rs  cross_action_round_trip.rs  edit.rs  format_preservation.rs  format_properties.rs  roundtrip.rs  snapshots.rs  transform.rs  undo.rs
src/ronin-core/tests/corpus/: README.md
src/ronin-core/tests/corpus/bevy/: scene_enums.scn.ron  scene_small.scn.ron
src/ronin-core/tests/corpus/malformed/: 01_unclosed_delimiters.ron  02_stray_tokens.ron  03_partial_value.ron  04_missing_separators.ron
src/ronin-core/tests/corpus/valid/: 01_struct_named.ron  02_struct_anonymous.ron  03_struct_nested.ron  04_enum_unit_variant.ron  05_enum_tuple_variant.ron  06_enum_struct_variant.ron  08_tuple_mixed.ron  10_list_trailing_comma.ron  11_list_nested.ron  12_map_string_keys.ron  13_map_nonstring_keys.ron  14_map_tuple_keys.ron  15_chars.ron  16_strings_escapes.ron  17_raw_strings.ron  18_numbers_int_forms.ron  19_numbers_float_forms.ron  20_bools.ron  22_option_some_none.ron  23_implicit_some.ron  24_extension_unwrap_newtypes.ron  25_extension_multiple.ron  26_extension_unknown.ron  27_comments_line.ron  28_comments_block.ron  29_comments_only.ron  30_deep_mixed.ron  33_crlf_line_endings.ron  34_bom_prefixed.ron  35_no_trailing_newline.ron  36_large_scene.scn.ron
src/ronin-core/tests/snapshots/: format_properties__snapshot_comments_threaded.snap  format_properties__snapshot_dangling_comment_empty_collection.snap  format_properties__snapshot_extension_attrs_and_comment.snap  format_properties__snapshot_map_non_string_keys.snap  format_properties__snapshot_multiline_list_trailing_comma.snap  format_properties__snapshot_nested_struct.snap  format_properties__snapshot_single_line_list.snap  snapshots__char_literals.snap  snapshots__extension_attributes.snap  snapshots__non_string_map_keys.snap  snapshots__numeric_and_escape_forms.snap  snapshots__raw_string_with_hashes.snap
src/ronin-types/: CHANGELOG.md  Cargo.toml  README.md
src/ronin-validate/: Cargo.toml  README.md
(+38 files in other folders)
