[package]
name = "ron-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Normalized RON type model for RONin (native-gated; JSON-Schema-2020-12-shaped TypeModel + x-ron-* extension layer)."
keywords = ["ron", "type-model", "json-schema", "schema", "types"]
categories = ["parser-implementations", "development-tools"]
readme = "README.md"

[dependencies]
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
syn = { version = "2.0.117", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
insta = "1.48.0"
proptest = "1.8.0"
