[package]
name = "ron-validate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM-clean type-aware RON validator: jsonschema over a CST→JSON projection (E006, offline)."
keywords = ["ron", "validation", "json-schema", "lint", "diagnostics"]
categories = ["parser-implementations", "development-tools"]
readme = "README.md"

# WASM-clean validator (ADR-0006): depends only on the rowan-only `ron-core`
# (path), `jsonschema`, and `serde_json`. `jsonschema` is taken with
# `default-features = false` so the default `resolve-http`/TLS features — which
# pull `reqwest`/`rustls` and add network access — stay OFF. This keeps the
# wasm32 build green and enforces FR-023's fully-offline guarantee. Do NOT depend
# on `ron-types` here (that crate is native: syn/schemars); the TypeModel is
# consumed as serialized JSON via `serde_json::Value`.
[dependencies]
ron-core = { version = "0.1.0", path = "../ron-core" }
jsonschema = { version = "0.46", default-features = false }
serde_json = "1.0.150"

[dev-dependencies]
proptest = "1.11.0"
insta = "1.47.2"
