[package]
name = "ronin-app"
version = "0.1.0"
edition.workspace = true
# Native egui/eframe 0.34 + egui_kittest require a newer toolchain than ron-core's
# 1.77 MSRV; native deps are confined to ronin-app, so this override is local-only.
rust-version = "1.92"
license.workspace = true
description = "RONin desktop application shell (stub; full implementation deferred to E003)."

[dependencies]
directories = "6.0.0"
# Use eframe's `glow` (OpenGL) backend, not `wgpu`: the wgpu/DX12 path pulls a
# `windows-core` version that conflicts in this graph, and a render harness for
# the editor does not need wgpu. `default-features = false` drops `wgpu`; we
# re-add the cross-platform essentials.
eframe = { version = "0.34", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = "0.34"
# Glob matching for binding resolution (E006 US2 — FR-008/FR-012). `globset`
# gives path-aware glob matching with deterministic, robust parsing; specificity
# is computed from the pattern string independently of the matcher.
globset = "0.4.16"
egui_extras = "0.34"
rfd = "0.17.2"
ron-core = { version = "0.1.0", path = "../ron-core" }
# Type-model acquisition (E006 US2 Phase 4b — FR-014/FR-024). ronin-app is the
# native app, so it may depend on the native-gated `ron-types`; only the
# WASM-clean `ron-core`/`ron-validate` must stay free of it.
ron-types = { version = "0.1.0", path = "../ron-types" }
ron-validate = { version = "0.1.0", path = "../ron-validate" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
egui_kittest = "0.34.3"
