[package]
name = "ronin-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Lossless, error-tolerant RON concrete-syntax-tree engine for RONin (WASM-clean core)."
keywords = ["ron", "cst", "parser", "syntax-tree", "lossless"]
categories = ["parser-implementations", "data-structures"]
readme = "README.md"

# WASM-clean core: the ONLY runtime dependency is rowan (pure-Rust CST library).
# No filesystem, UI, async-runtime, or native/cc-built dependencies are permitted
# here (project-instructions §II, TR-007, INV-9). Do NOT add `ron`/serde — the
# `ron` crate is grammar-authority/interop-only and is introduced later (E010).
[dependencies]
rowan = "0.16.1"

[dev-dependencies]
proptest = "1.11.0"
insta = "1.47.2"
arbitrary = { version = "1.4.2", features = ["derive"] }

# Informational parse/print benchmark (TR-016): no external bench framework,
# a plain `fn main()` timing via `std::time::Instant`. NOT a QC/release gate.
[[bench]]
name = "parse_print"
harness = false
